<resources>
    //App Name
    <string name="app_name">AmiSpace</string>

    //Universal Values


    //Activities
    //Intro Activity
    <string name="intro_hello_text">Hello!</string>
    <string name="intro_sign_up">Sign Up!</string>
    <string name="intro_sign_in">Sign In!</string>
    <string name="intro_sign_in_subtext">Returning? Just sign in to resume.</string>
    <string name="intro_sign_up_subtext">New Here? Don\'t worry just Sign Up.</string>

    //SignUp Activity
    <string name="sign_up_welcome_text">Welcome!</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>

    //SignIn Activity
    <string name="sign_in_email_or_phone">Email or Phone</string>
    <string name="please_wait_8230">Please Wait…</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="no_boards_are_available">No Boards are available!</string>

    <string name="add_list">Add List</string>
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>

    <string name="delete_card">Delete Card</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">amispace_notification_channel_id</string>

</resources>