<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".activities.SignInActivity">

    <ImageButton
        android:id="@+id/sign_in_back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_back_btn"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/intro_greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/sign_up_welcome_text"
        android:textColor="@color/charcoal"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_back_btn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sign_in_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_green"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/sign_in_text_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_greeting_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center"
                android:text="@string/intro_sign_in"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/sign_in_email_or_phone"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextAppearance="@font/quicksand_light"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_light"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/sign_up_password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextAppearance="@font/quicksand_light"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_light"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_in_create_acc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_regular"
                    android:text="Create Account"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sign_in_forgot_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_regular"
                    android:text="Forgot Password?"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/primary_blue"
                    android:textSize="16sp" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/sign_in_forward_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_forward_btn"
                android:src="@drawable/ic_forward_arrow_green"
                tools:ignore="ContentDescription" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/sign_in_text_logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_amispace_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
